PROD-679 - Fix spacing issue of admin setting blocks

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -2368,7 +2368,11 @@ h2.has_tutorial_btn .bbapp-tutorial-btn p {
 
 .avatar-options .avatar-custom-input {
   display: inline-block;
-  margin: 0 0 25px 7px;
+  margin: 0 0 0 7px;
+}
+
+.avatar-options .avatar-custom-input + p.description {
+  margin-top: 15px;
 }
 
 .avatar-options .avatar-custom-input > label {
