--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -2518,7 +2518,11 @@ h2.has_tutorial_btn {
 
 	.avatar-custom-input {
 		display: inline-block;
-		margin: 0 7px 25px 0;
+		margin: 0 7px 0 0;
+
+		+ p.description {
+			margin-top: 15px;
+		}
 
 		> label {
 			display: inline-block;
